@@ -15,6 +15,10 @@ Roberto Francisco Arroyo Moreno <robfram -at- ugr -dot- es>
 Steve Crane <Steve -dot Crane -at- rococosoft -dot- com>
 Philippe Marschall <philippe -dot- marschall -at- gmail -dot- com>
 
-The included Viewer application was written by:
+The included Viewer application was originally written by:
 
 Peter Cox <petercox -at- gawab -dot- com>
+
+with patches from:
+
+Zsombor Gegesy <gzsombor -at- gmail -dot- com>
